<resources>

    <string name="app_name">ایستگاه خدمات</string>
    <string name="ansar_bank">بانک انصار</string>
    <string name="technotapp_co">بانک انصار</string>
    <string name="print_web">www.shaparak.ir</string>
    <string name="print_tel">75105000</string>

    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\           Classes          /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--=================================     Activities     =================================-->

    <!--    *************************      sign in activity      *************************    -->
    <string name="SignInActivity_invalid_merchant_username">اطلاعات وارد شده اشتباه است</string>
    <string name="SignInActivity_invalid_merchant_password">اطلاعات وارد شده اشتباه است"</string>
    <string name="SignInActivity_empty_merchantID">کد فروشگاه وارد نشده است.</string>
    <string name="SignInActivity_empty_merchantPassword">رمزعبور وارد نشده است.</string>
    <string name="api_data_download_error">خطا در دریافت اطلاعات</string>
    <string name="serverConnectingError">خطا در ارتباط با سرور مرکزی</string>
    <string name="SignInActivity_loading">در حال بارگیری اطلاعات</string>

    <!--    *************************      splash activity      *************************    -->
    <string name="splash_btn_retry">تلاش مجدد</string>

    <!--=================================     Fragments      =================================-->

    <!--    *************************        Pin Fragment        *************************    -->
    <string name="PinFragment_error_minpinlenght">رمز عبور نمی تواند کمتر از 4 عدد باشد</string>
    <string name="fragment_pin_title">لطفا رمز اول کارت را وارد کنید</string>

    <!--    *************************      Charge Fragment      *************************    -->
    <string name="ChargeFragment_charge_service">خدمات شارژ</string>

    <!--    *************************      Receipt Fragment     *************************    -->
    <string name="ReceiptFragment_billingPay">پرداخت قبض</string>

    <!--    *************************        QR Fragment        *************************    -->
    <string name="QrFragmentTitle">بارکد فروشگاه</string>

    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\           Layouts          /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--===================================     Activities     =================================-->
    <!--    *************************            sign in           *************************    -->
    <string name="activity_signin_signin">ورود</string>
    <string name="activity_signin_password">رمز ورود</string>
    <string name="activity_signin_merchantCode">کد فروشگاه:</string>
    <string name="activity_signin_copyWriteText">تمامی حقوق این برنامه متعلق به تکنوتَپ می باشد.</string>
    <string name="activity_signin_merchant_code">کد بازرگان</string>

    <!--===================================     Fragments      =================================-->
    <!--    *************************  card service deposit buy    *************************    -->
    <string name="fragment_card_service_deposit_buy_amount">لطفا مبلغ را وارد کنید</string>
    <string name="fragment_card_service_deposit_buy_confirm">تایید</string>
    <!--    *************************     dialog sweeping card     *************************    -->
    <string name="fragment_dialog_sweepingcard_PleaseSweepCard">لطفا کارت خود را بکشید</string>
    <string name="fragment_dialog_sweepingcard_proress_cancell">انصراف</string>

    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\           Others           /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->
    <!--/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\-->

    <!--==================================================================== -->
    <!-- MagCard -->
    <!--==================================================================== -->
    <string name="TransactionHelper_pleaseWait">لطفا کمی صبر کنید...</string>
    <string name="MagCard_error_SweepCard">خطا در کشیدن کارت</string>
    <string name="irsansMedium">irsans-Medium</string>
    <string name="irsansNumber">irsans_number</string>

    <!--==================================================================== -->
    <!-- public message -->
    <!--==================================================================== -->

    <string name="updating">در حال بروزرسانی</string>
    <string name="successfull_transaction">تراکنش موفق</string>
    <string name="transaction_result_btn_view">رویت تراکنش</string>

    <!--=================================     Setting      =================================-->

    <string-array name="user_roles">
        <item>بازرگان</item>
        <item>پشتیبان</item>

    </string-array>

    <!--==================================================================== -->
    <!-- Preferences Key -->
    <!--==================================================================== -->

    <string name="pref_key_switch_turning_activation">pref_key_turning_activation</string>
    <string name="pref_key_switch_printer_activation">pref_key_switch_printer_activation</string>
    <string name="pref_key_seekbar_brightness">pref_key_seekbar_brightness</string>


</resources>
